--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,29 @@ dependencies {
 
     //스프링 MVC
     implementation 'org.springframework:spring-webmvc:6.0.4'
+
+    //내장 톰켓
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.1.5'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+//일반 Jar 생성
+task buildJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'hello.embed.EmbedTomcatSpringMain'
+    }
+    with jar
+}
+
+//Fat Jar 생성
+task buildFatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'hello.embed.EmbedTomcatSpringMain'
+    }
+    duplicatesStrategy = DuplicatesStrategy.WARN
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
